--- a/public/index.html
+++ b/public/index.html
@@ -7,23 +7,7 @@
   <body>
     <p>Welcome to the chat tab</p>
     <script src="socket.io/socket.io.js"></script>
-    <script>
-    var socket = io();
-
-    // socket.on('connect', () =>
-    socket.on('connect', function ()
-    // function keyword not arrow function for client browser compatibility
-    {
-      console.log('Connected to server');
-    });
-
-    // socket.on('disconnect', () =>
-    socket.on('disconnect', function ()
-    {
-      console.log('Disconnected from server');
-    });
-
-    </script>
+    <script src="/js/index.js"></script>
 
   </body>
 </html>
