added base 64 placeholder to avoid favicon error

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Node js (socketIO) tutorial chat app</title>
+    <link rel="icon" href="data:;base64,anything">
+    <!-- https://www.udemy.com/the-complete-nodejs-developer-course-2/learn/v4/questions/4410866 https://stackoverflow.com/q/5199902  -->
   </head>
   <body>
     <p>Welcome to the chat tab</p>
