--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,14 @@
   </head>
   <body>
     <p>Welcome to the chat tab</p>
+
+    <form id="message-form">
+        <input name="message" type="text" placeholder="Type message here" />
+        <button>Send</button>
+    </form>
+
     <script src="socket.io/socket.io.js"></script>
+    <script src="/js/libs/jquery-3.3.1.min.js"></script>
     <script src="/js/index.js"></script>
 
   </body>
