basic ol list for message display - 9-113

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
   <body>
     <p>Welcome to the chat tab</p>
 
+    <ol id="messages">
+
+    </ol>
+
     <form id="message-form">
         <input name="message" type="text" placeholder="Type message here" />
         <button>Send</button>
