--- a/public/index.html
+++ b/public/index.html
@@ -30,12 +30,44 @@
     </div>
     </div>
 
+    <!-- template for mustache - text message -->
+    <script id="message-template" type="text/template">
+      <!--<p>This bit is a template</p> -->
+      <!--<p>{{messageText}}</p>-->
+      <li class="message">
+        <div class="message__title">
+          <h4>{{from}}</h4>
+          <span>{{createdAt}}</span>
+        </div>
+        <div class="message__body">
+          <p>{{messageText}}</p>
+        </div>
+    </script>
+
+    <!-- template for mustache - location message -->
+    <script id="location-template" type="text/template">
+      <!--<p>This bit is a template</p> -->
+      <!--<p>{{messageText}}</p>-->
+      <li class="message">
+        <div class="message__title">
+          <h4>{{from}}</h4>
+          <span>{{createdAt}}</span>
+        </div>
+        <div class="message__body">
+          <p><a href="{{url}}" target="_blank">My current location</p>
+        </div>
+    </script>
+
+
     <p>Welcome to the chat tab</p>
 
 
     <script src="socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.3.1.min.js"></script>
     <script src="/js/libs/moment.js"></script>
+    <!-- instead of copying js to the lib folder, could alternatively link to a CDN to get moment.js -->
+    <!-- could also use the minified version instead -->
+    <script src="/js/libs/mustache.js"></script>
     <script src="/js/index.js"></script>
 
   </body>
