--- a/public/index.html
+++ b/public/index.html
@@ -1,74 +1,33 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/styles.css">
-    <title>Node js (socketIO) tutorial chat app</title>
-    <link rel="icon" href="data:;base64,anything">
-    <!-- https://www.udemy.com/the-complete-nodejs-developer-course-2/learn/v4/questions/4410866 https://stackoverflow.com/q/5199902  -->
-  </head>
-  <body class="chat">
+<!<!DOCTYPE html>
 
-<!-- pre-written CSS with BEM__notation names -->
-    <div class="chat__sidebar">
-      <h3>People</h3>
-      <div id="users"></div>
-    </div>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title> Join | ChatApp</title>
+  <link rel="stylesheet" href="/css/styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <link rel="icon" href="data:;base64,anything">
+  <!-- https://www.udemy.com/the-complete-nodejs-developer-course-2/learn/v4/questions/4410866 https://stackoverflow.com/q/5199902  -->  
+</head>
 
-    <div class="chat__main">
-      <ol id="messages" class="chat__messages">
-      </ol>
-      <div class="chat__footer">
-        <form id="message-form">
-            <input name="message" type="text" placeholder="Type message here" autofocus autocomplete="off" />
-            <button>Send</button>
-        </form>
-
-        <button id="send-location">
-          Send location
-        </button>
-    </div>
-    </div>
-
-    <!-- template for mustache - text message -->
-    <script id="message-template" type="text/template">
-      <!--<p>This bit is a template</p> -->
-      <!--<p>{{messageText}}</p>-->
-      <li class="message">
-        <div class="message__title">
-          <h4>{{from}}</h4>
-          <span>{{createdAt}}</span>
-        </div>
-        <div class="message__body">
-          <p>{{messageText}}</p>
-        </div>
-    </script>
-
-    <!-- template for mustache - location message -->
-    <script id="location-template" type="text/template">
-      <!--<p>This bit is a template</p> -->
-      <!--<p>{{messageText}}</p>-->
-      <li class="message">
-        <div class="message__title">
-          <h4>{{from}}</h4>
-          <span>{{createdAt}}</span>
-        </div>
-        <div class="message__body">
-          <p><a href="{{url}}" target="_blank">My current location</p>
-        </div>
-    </script>
-
-
-    <p>Welcome to the chat tab</p>
-
-
-    <script src="socket.io/socket.io.js"></script>
-    <script src="/js/libs/jquery-3.3.1.min.js"></script>
-    <script src="/js/libs/moment.js"></script>
-    <!-- instead of copying js to the lib folder, could alternatively link to a CDN to get moment.js -->
-    <!-- could also use the minified version instead -->
-    <script src="/js/libs/mustache.js"></script>
-    <script src="/js/index.js"></script>
-
-  </body>
+<body class="centered-form">
+  <div class="centered-form__form">
+    <form action="/chat.html">   <!-- action attribute to prevent reload and POST as querystring - goto chat instead -->
+      <div class="form-field">
+        <h3>Join-a-chat!</h3>
+      </div>
+      <div class="form-field">
+        <label>Name to display</label>
+        <input type="text" name="name" autofocus />
+      </div>
+      <div class="form-field">
+        <label>Room name</label>
+        <input type="text" name="room"/>
+      </div>
+      <div class="form-field">
+        <button>Join chat</button>
+      </div>
+    </form>
+  </div>
+</body>
 </html>
