deparam front-end custom library, isRealString validation, tests for same - 9-122 (& challenge)

--- a/public/chat.html
+++ b/public/chat.html
@@ -69,6 +69,7 @@
     <!-- instead of copying js to the lib folder, could alternatively link to a CDN to get moment.js -->
     <!-- could also use the minified version instead -->
     <script src="/js/libs/mustache.js"></script>
+    <script src="/js/libs/deparam.js"></script>
     <script src="/js/chat.js"></script>
 
   </body>
